Fix iOS playback
- iOS playback should now work
- Fixed a visual bug with the searchbar on iOS
- Added hover titles to tracks
- Fixed bug where duplicate song titles would act as duplicate tracks
- Hopefully fix media controls on Android (PC is still bugging out for some reason, browser based?)

--- a/src/app.css
+++ b/src/app.css
@@ -34,6 +34,16 @@ body {
   min-width: 320px;
   height: 100%;
   width: 100%;
+  touch-action: pan-x pan-y;
+}
+
+button {
+  border: 5px solid buttonface;
+  color: white;
+}
+.btnrow {
+  display: flex;
+  gap: 5px;
 }
 
 #app {
@@ -72,5 +82,7 @@ body {
   }
   button {
     background-color: #f9f9f9;
+    border-color: #f9f9f9;
+    color: black;
   }
 }
