--- a/src/app.css
+++ b/src/app.css
@@ -50,6 +50,12 @@ button {
   text-align: center;
 }
 
+/* crosses components */
+.audioPlayer.fullscreen .queue {
+  top: 40px;
+  bottom: unset;
+}
+
 .loadingClock {
   animation: clock 4s infinite;
   animation-direction: reverse;
