UI, playlist, layout overhaul; update songs
- Overhauled playlist system for easier usage
- Overhauled UI; added tabs for parks
- You can now click on the current playing song to go to its album
- Added Wonderous Journeys and other fireworks shows, RR & New ToonTown; Fantasmic 2017; WOC Season of Light Exit
- Removed some soundscapes and songs from WDW
- Moved Holiday/Halloween music to their respective albums; now labelled with a "HALLOWEEN" or "HOLIDAY" tag
- Moved Bug's Land music into its own album

--- a/src/app.css
+++ b/src/app.css
@@ -6,8 +6,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background-color: var(--bg);
+  --bg: #242424;
   --alternate: #444;
   --alternate-dark: #222;
   --safe-margin-bottom: 0px;
@@ -50,6 +50,14 @@ button {
 
 #app {
   text-align: center;
+}
+
+/* tags */
+.tag.HOLIDAY {
+  background: linear-gradient(90deg, #ff0000 0%, #ffff00 100%) !important;
+}
+.tag.HALLOWEEN {
+  background: linear-gradient(90deg, #ff8000 0%, #ffff00 100%) !important;
 }
 
 /* crosses components */
@@ -103,7 +111,7 @@ button {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    --bg: #ffffff;
     --alternate: #ccc;
     --alternate-dark: #ddd;
   }
