--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -7,6 +9,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: var(--bg);
+  --primary: #2ba5e6;
   --bg: #242424;
   --alternate: #444;
   --alternate-dark: #222;
@@ -74,8 +77,8 @@ button {
   clip-path: polygon(0 0, 50% 100%, 100% 0);
 
   position: fixed;
-  bottom: calc(80px + var(--safe-margin-bottom));
-  right: 17px;
+  bottom: calc(60px + var(--safe-margin-bottom));
+  right: 30px;
   width: 20px;
   height: 10px;
 }
@@ -86,16 +89,6 @@ button {
   .audioPlayer:not(.fullscreen) .queue:after {
     content: unset;
   }
-}
-
-.loadingClock {
-  animation: clock 4s infinite;
-  animation-direction: reverse;
-  transform:rotate(25deg);
-}
-
-@keyframes clock {
-  50% { transform: rotate(-25deg) }
 }
 
 @keyframes fadeIn {
