--- a/src/Album/Album.css
+++ b/src/Album/Album.css
@@ -122,6 +122,14 @@ header h2 {
   font-size: 1.5em;
   flex-grow: 1;
 }
+h4 {
+  text-align: left;
+  font-size: 0.9em;
+  color: #777;
+  text-transform: uppercase;
+  margin: 0;
+  margin-top: 10px;
+}
 @media screen and (max-width: 500px) {
   header {
     flex-direction: column;
