Fix album images, new loops, version bump
- Fix issue where scrolling down and up would squish the album image
- Added Philharmagic, SFS, Pixar Fest 2024

--- a/src/Album/Album.css
+++ b/src/Album/Album.css
@@ -81,6 +81,7 @@ header .closeBtn {
 header img {
   border-radius: 10px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  flex-shrink: 0;
 }
 header .info {
   flex-grow: 1;
